--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "node App.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
