--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^1.3.2",
     "mysql": "^2.18.1",
     "node-cron": "^2.0.3",
     "nodemon": "^2.0.4",
@@ -22,7 +23,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "node App.js",
+    "start": "node apiIntegration.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
