--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "node apiIntegration.js",
+    "start": "node App.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
