--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@testing-library/user-event": "^7.2.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "consolidate": "^0.15.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mercadopago": "^1.3.2",
@@ -20,7 +23,8 @@
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "yargs": "^15.4.1"
   },
   "scripts": {
     "start": "node App.js",
