--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "body-parser": "^1.19.0",
     "consolidate": "^0.15.1",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -23,8 +22,7 @@
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "yargs": "^15.4.1"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "node App.js",
