--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mercadopago": "^1.3.2",
     "mysql": "^2.18.1",
     "node-cron": "^2.0.3",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
